add file part